# BigDecimal

./: .clangd  CMakeLists.txt  README.md
include/bigdecimal/: header.h
scripts/: lbuilddeb.sh  lcompile.sh  lruntest.sh
src/: bigdecimal.cpp
tests/: test_1.cpp  test_2.cpp
